--- a/MageWars/res/values/strings.xml
+++ b/MageWars/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">MageWars</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_book">BookActivity</string>
+    <string name="titulo_book">Titulo Libro</string>
 
 </resources>
